--- a/static/css/article.less
+++ b/static/css/article.less
@@ -18,6 +18,8 @@
 
     .iconfont {
       margin-left: 20px;
+      font-size: 12px;
+      margin-right: 5px;
 
       &:first-child {
         margin-left: 0px;
@@ -38,5 +40,29 @@
       max-width: 100%;
       max-height: 100%;
     }
+  }
+}
+
+.prev-next {
+  margin-top: 10px;
+  padding-top: 10px;
+  border-top: #ccc 1px solid;
+
+  .item {
+    overflow: hidden;
+    margin-top: 10px;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
+  .item, a {
+    line-height: 22px;
+    overflow: hidden;
+    font-size: 14px;
+    color: #434A54;
+    font-weight: 300;
+
   }
 }
