--- a/static/css/category.less
+++ b/static/css/category.less
@@ -1,3 +1,26 @@
 @import "base";
 @import "item";
 @import "paginator";
+
+.all-category {
+  a {
+    display: block;
+    font-size: 13px;
+    padding: 0 15px;
+    line-height: 30px;
+    height: 30px;
+    float: left;
+    margin: 0 6px 0 0;
+    color: #666;
+    background: #eee;
+
+    &:hover {
+      background: #ddd;
+    }
+  }
+
+  .active {
+    background-color: #4593FF;
+    color: white;
+  }
+}
