--- a/static/css/paginator.less
+++ b/static/css/paginator.less
@@ -17,8 +17,16 @@
     display: block;
     height: 34px;
     line-height: 34px;
-    padding: 0px 15px;
     border-right: #ddd 1px solid;
+  }
+
+  .rows {
+    padding: 0px 15px;
+  }
+
+  a {
+    min-width: 50px;
+    text-align: center;
   }
 
   a:last-child {
