--- a/static/css/category.css
+++ b/static/css/category.css
@@ -347,10 +347,34 @@ a:hover {
   display: block;
   height: 34px;
   line-height: 34px;
-  padding: 0px 15px;
   border-right: #ddd 1px solid;
+}
+.paginator .rows {
+  padding: 0px 15px;
+}
+.paginator a {
+  min-width: 50px;
+  text-align: center;
 }
 .paginator a:last-child {
   border-right: none;
+}
+.all-category a {
+  display: block;
+  font-size: 13px;
+  padding: 0 15px;
+  line-height: 30px;
+  height: 30px;
+  float: left;
+  margin: 0 6px 0 0;
+  color: #666;
+  background: #eee;
+}
+.all-category a:hover {
+  background: #ddd;
+}
+.all-category .active {
+  background-color: #4593FF;
+  color: white;
 }
 /*# sourceMappingURL=category.css.map */
